# otus_cpp_3

./: CMakeLists.txt  allocator_traits.cpp  build.sh  logging_allocator.cpp  my_boost_pool_alloc.cpp  new_overload.cpp  polymorphic_allocator.cpp  polymorphism.cpp  pretty.h  simple_allocator.cpp
.github/workflows/: cmake-single-platform.yml
